@@ -219,4 +219,5 @@ BUGFIXES:
 190 ==> 393728 - Reread metadata from Video uses sidecar only.
 191 ==> 393925 - UpdateSchemaFromV7ToV9 fails due to duplicate key in album_2.
 192 ==> 393773 - showfoto crashes when geotagging.
-193 ==> 
+193 ==> 388199 - No context menu to copy coordinates from map.
+194 ==> 
